--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 	margin: 0;
 	overflow: hidden;
 	padding: 0;
@@ -10,7 +10,7 @@ html, body {
 
 .container {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 	margin: 0;
 	overflow: hidden;
 	padding: 0;
